app/assets/stylesheets/layouts/_wrapper.sass
.wrapper[role=layout]
  &.-container
    margin-left: 2vw
    margin-right: 2vw
    max-width: 100vw
    @media screen and (min-width: $large)
      margin-left: 3vw
      margin-right: 3vw

  @media screen and (min-width: $medium)
    &.-medium
      max-width: $medium
      margin-left: auto
      margin-right: auto

  @media screen and (min-width: $large)
    &.-large
      max-width: $large
      margin-left: auto
      margin-right: auto

  @media screen and (min-width: 64rem)
    &.-small
      max-width: 68rem
      margin-left: auto
      margin-right: auto

  @media screen and (min-width: 36rem)
    &.-tiny
      max-width: 42rem
      margin-left: auto
      margin-right: auto

  @media screen and (min-width: $contained)
    &.-contained
      max-width: var(--contained)
      margin-left: auto
      margin-right: auto

